<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/textInfo"
            android:textColor="@color/moccasin" >
        </TextView>

        <Spinner
            android:id="@+id/spinnerCharacter"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:spinnerMode="dropdown" >
        </Spinner>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:orientation="horizontal"
            android:weightSum="2" >

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/textLevel"
                    android:layout_width="match_parent"
                    android:layout_height="20dp"
                    android:gravity="center"
                    android:text="@string/textLevel"
                    android:textColor="@color/violet" >
                </TextView>

                <Spinner
                    android:id="@+id/spinnerLevel"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:spinnerMode="dropdown" >
                </Spinner>
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/textTier"
                    android:layout_width="match_parent"
                    android:layout_height="20dp"
                    android:gravity="center"
                    android:text="@string/textTier"
                    android:textColor="@color/violet" >
                </TextView>

                <Spinner
                    android:id="@+id/spinnerTier"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:spinnerMode="dropdown" >
                </Spinner>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:orientation="horizontal"
            android:weightSum="2" >

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/textWeaponRank"
                    android:layout_width="match_parent"
                    android:layout_height="20dp"
                    android:gravity="center"
                    android:text="@string/textWeaponRank"
                    android:textColor="@color/violet" >
                </TextView>

                <Spinner
                    android:id="@+id/spinnerWeaponRank"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:spinnerMode="dropdown" >
                </Spinner>
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/textLoyalty"
                    android:layout_width="match_parent"
                    android:layout_height="20dp"
                    android:gravity="center"
                    android:text="@string/textLoyalty"
                    android:textColor="@color/violet" >
                </TextView>

                <Spinner
                    android:id="@+id/spinnerLoyalty"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:spinnerMode="dropdown" >
                </Spinner>
            </LinearLayout>
        </LinearLayout>

        <TextView
            android:id="@+id/textAddInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/textAddInfo"
            android:textColor="@color/moccasin" >
        </TextView>

        <Button
            android:id="@+id/add"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/add"
            android:textColor="@color/yellowgreen" />
    </LinearLayout>

</ScrollView>